--- a/demo/IO/readme
+++ b/demo/IO/readme
@@ -1,6 +1,6 @@
 1 --- add_mark.c   主要操作是将16进制文件16字节对齐添加时间日期版本号校验和保存到一个新的文件主要使用的是fopen fread fwrite
 
-2 ---              主要操作是每次获取一样文本，并将文本内的内容转换成16进制的数据
+2 ---              主要操作是每次获取一行行文本，并将文本内的内容转换成16进制的数据
 
 
 
